styles: scrollbar fix

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -82,3 +82,27 @@ a {
 i {
     margin: 5px;
 }
+
+* {
+
+    /* Custom scrollbar for WebKit-based browsers (Chrome, Safari, Edge) */
+    ::-webkit-scrollbar {
+        width: 10px; /* Width of the scrollbar */
+        height: 10px; /* Height of the scrollbar (for horizontal scrollbars) */
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(222, 152, 63, 1); /* Custom scrollbar color */
+        border-radius: 5px; /* Rounded corners */
+    }
+    
+    ::-webkit-scrollbar-track {
+        background-color: transparent; /* Hide scrollbar background */
+    }
+    
+    /* Custom scrollbar for Firefox */
+    * {
+        scrollbar-width: thin; /* Thin scrollbar */
+        scrollbar-color: rgba(222, 152, 63, 1) transparent; /* Thumb color and track color */
+    }
+}
